<resources>
    <string name="app_name">MenuOpecoes</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="fui_clicado">" fui clicado!"</string>
    <string name="usar_dados">Usar dados</string>
    <string name="azul">Azul</string>
    <string name="vermelho">Vermelho</string>
    <string name="sub_menu">Submenu</string>
    <string name="opcao_um">Opção 1</string>
    <string name="opcao_dois">Opção 2</string>
</resources>